--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Vite App</title>
+    <title>ae-admin</title>
   </head>
   <body>
     <div id="app"></div>
